# Codebase-Onboarding-Assistant

./: .env.example  .gitignore  ARCHITECTURE.md  README.md  docker-compose.yml  pyproject.toml
app/: config.py  db.py  embeddings.py  graph.py  llm.py  pipeline.py  prompts.py  schemas.py
app/critic/: mechanical.py  route.py  semantic.py
app/indexing/: chunker.py  indexer.py  syntax_chunker.py  walker.py
app/nodes/: drafter.py  planner.py  synthesizer.py
app/retrieval/: retriever.py  store.py
cli/: main.py
db/migrations/: 0001_init.sql  0002_repos.sql
evals/: run_critic_eval.py
evals/fixtures/: fabricated_01.json  fabricated_02.json  fabricated_03.json  fabricated_04.json  fabricated_05.json  fabricated_06.json  fabricated_07.json  fabricated_08.json  unsupported_claim_01.json  unsupported_claim_02.json  unsupported_claim_03.json  unsupported_claim_04.json  unsupported_claim_05.json  unsupported_claim_06.json  unsupported_claim_07.json  unsupported_claim_08.json  verified_01.json  verified_02.json  verified_03.json  verified_04.json  verified_05.json  verified_06.json  verified_07.json  verified_08.json  wrong_location_01.json  wrong_location_02.json  wrong_location_03.json  wrong_location_04.json  (+4 more)
tests/: conftest.py  test_chunker.py  test_config.py  test_critic_mechanical.py  test_critic_route.py  test_critic_semantic.py  test_drafter.py  test_embeddings.py  test_graph.py  test_graph_integration.py  test_llm.py  test_pipeline.py  test_planner.py  test_retriever.py  test_schemas.py  test_store.py  test_syntax_chunker.py  test_synthesizer.py  test_walker.py
(+11 files in other folders)
