[project]
name = "onboard"
version = "0.1.0"
description = "Codebase onboarding assistant: multi-agent RAG with a self-verifying critic."
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "langchain-core>=0.3",
    "langchain-openai>=0.2",
    "langchain-groq>=0.2",
]

[project.optional-dependencies]
local-embeddings = ["sentence-transformers>=3.0"]
dev = ["pytest>=8.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app", "cli", "evals"]

[tool.pytest.ini_options]
testpaths = ["tests"]
